kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1  
kind: Deployment
metadata:
  name: booking-service-deployment
  namespace: online-event-booking-hamza-ahmed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:  
    metadata:
      labels:
        app: booking-service
    spec:
      # volumes:
      #   - name: secrets
      #     secret:
      #       secretName: booking-secrets  

      containers:
        - name: booking-service
          image: localhost:5000/cs4067-a2-i221339-hamza-ahmed-bookingservice:latest 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
---

apiVersion: v1  
kind: Service
metadata:
  name: booking-service
  namespace: online-event-booking-hamza-ahmed
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: LoadBalancer
