kubernetes/deployment-service-event.yml
apiVersion: apps/v1  
kind: Deployment
metadata:
  name: event-service-deployment
  namespace: online-event-booking-hamza-ahmed
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:  
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: 22i1339/cs4067-a2-i221339-hamza-ahmed-eventservice:latest  
          ports:
            - containerPort: 5002
---

apiVersion: v1  
kind: Service
metadata:
  name: event-service-service
  namespace: online-event-booking-hamza-ahmed
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: LoadBalancer
