kubernetes/deployment-service-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: online-event-booking-hamza-ahmed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db  # MongoDB stores data in /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc  # Uses a PVC for persistent storage

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: online-event-booking-hamza-ahmed
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP  # Internal service within Kubernetes
