kubernetes/deployment-service-notification.yaml
apiVersion: apps/v1  
kind: Deployment
metadata:
  name: notification-service-deployment
  namespace: online-event-booking-hamza-ahmed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:  
    metadata:
      labels:
        app: notification-service
    spec:
      volumes:
        - name: secrets
          secret:
            secretName: notification-secrets  

      containers:
        - name: notification-service
          image: 22i1339/notification-service:latest  
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5003
          volumeMounts:
            - name: secrets  
              readOnly: true
              mountPath: "/etc/secret-volume"

---

apiVersion: v1  
kind: Service
metadata:
  name: notification-service
  namespace: online-event-booking-hamza-ahmed
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: LoadBalancer
