kubernetes/deployment-service-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresdb
  namespace: online-event-booking-hamza-ahmed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data  # Correct PostgreSQL default data directory
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc  # Uses a PVC for persistent storage

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: online-event-booking-hamza-ahmed
spec:
  selector:
    app: postgresdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP  # Internal service within Kubernetes
