kubernetes/deployment-service-user.yaml
apiVersion: apps/v1  
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: online-event-booking-hamza-ahmed
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:  
    metadata:
      labels:
        app: user-service
    spec:
      volumes:
        - name: secrets
          secret:
            secretName: user-secrets  

      containers:
        - name: user-service
          image: localhost:5000/cs4067-a2-i221339-hamza-ahmed-userservice:latest 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5004
          volumeMounts:
            - name: secrets  
              readOnly: true
              mountPath: "/etc/secret-volume"

---

apiVersion: v1  
kind: Service
metadata:
  name: user-service
  namespace: online-event-booking-hamza-ahmed
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
  type: LoadBalancer
