kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-booking-ingress
  namespace: online-event-booking-hamza-ahmed
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service  
                port:
                  number: 3000
          - path: /booking
            pathType: Prefix
            backend:
              service:
                name: booking-service  
                port:
                  number: 5001
          - path: /event
            pathType: Prefix
            backend:
              service:
                name: event-service  
                port:
                  number: 5002
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-service  
                port:
                  number: 5003
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service  
                port:
                  number: 5004
